--- a/templates/base/navBar.html
+++ b/templates/base/navBar.html
@@ -5,7 +5,7 @@
     <img id="bg" src="{% static 'images/background.jpg' %}" alt="">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/topBar.css' %}">
-    <div class="topBar">
+    <div class="topBar" id="TopBar">
         <a href="#" class="active">Home</a>
         <a href="#">Blog</a>
         <a href="#">Calendar</a>
