--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,11 @@
     <title>{% block pageTitle %}{% endblock pageTitle %}</title>
 </head>
 <body>
-    <header>{% block pageHeader %}
-        
+        {% block pageHeader %}
+
         {% include 'base/navBar.html' %}
 
-        {% endblock pageHeader %}</header>
+        {% endblock pageHeader %}
 
     
 
