--- a/templates/base/navBar.html
+++ b/templates/base/navBar.html
@@ -1,12 +1,11 @@
 
 {% block pageHeader %}
 
-    {% load static %}
-    <img id="bg" src="{% static 'images/background.jpg' %}" alt="">
+
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/topBar.css' %}">
-    <div class="topBar" id="TopBar">
-        <a href="#" class="active">Home</a>
+    <div class="" id="TopBar">
+        <a href="#" class="current">Home</a>
         <a href="#">Blog</a>
         <a href="#">Calendar</a>
         <a href="#">Cards</a>
