--- a/static/css/topBar.css
+++ b/static/css/topBar.css
@@ -1,11 +1,11 @@
 
 #TopBar{
     background-color: #444;
-    /*width: 100%;*/
+    width: 100%;
     height: 40px;
     overflow: hidden;
     line-height: 40px;
-    padding: 14px 16px;
+    padding: 14px 0;
     text-align: center;
     border-bottom: 3px solid black;
     z-index: 1;
@@ -71,7 +71,8 @@
     display: inline-block;
     position: absolute;
     margin: 4px 2px;
-    right: 25px;
+    right: 5px;
+    line-height: 40px;
     cursor: pointer;
     overflow: hidden;
 }
@@ -87,15 +88,17 @@
     padding: 16px 0;
 }
 
+
 .sticky{
     position: fixed;
     top: 2px;
     right: 0;
     left: 0;
     overflow: hidden;
-    width: 100vh;
-    padding: 14px 16px;
+    width: 100vw;
+    padding: 14px 0;
 }
+
 
 .sticky + .content{
     padding-top: 60px;
