--- a/templates/index.html
+++ b/templates/index.html
@@ -22,24 +22,37 @@
         <div class="slides fade">
             <div class="numberText">1 / 3</div>
             {% load static %}
-            <img src="{% static 'images/slide1.jpg' %}" alt="image source" style="width:100%">
+            <img class="slideImg" src="{% static 'images/slide1.jpg' %}" alt="image source" style="width:100%">
+            <div class="modal">
+                <span class="closeImg">&times;</span>
+                <img class="modal-content">
+            </div>
             <div class="captionText"></div>
         </div>
         <div class="slides fade">.
             <div class="numberText">2 / 3</div>
             {% load static %}
-            <img src="{% static 'images/slide2.jpg' %}" alt="image source" style="width:100%">
+            <img class="slideImg" src="{% static 'images/slide2.jpg' %}" alt="image source" style="width:100%">
+            <div class="modal">
+                <span class="closeImg">&times;</span>
+                <img class="modal-content">
+            </div>
             <div class="captionText"></div>
         </div>
         <div class="slides fade">
             <div class="numberText">3 / 3</div>
             {% load static %}
-            <img src="{% static 'images/slide3.jpg' %}" alt="image source" style="width:100%">
+            <img class="slideImg" src="{% static 'images/slide3.jpg' %}" alt="image source" style="width:100%">
+            <div class="modal">
+                <span class="closeImg">&times;</span>
+                <img class="modal-content">
+            </div>
             <div class="captionText"></div>
         </div>
-        <a class="prev" onclick="plusSlides(-1); showSlider()">&#10094</a>
+        <a class="prev" onclick="plusSlides(-1)">&#10094</a>
         <a class="next" onclick="plusSlides(1)">&#10095</a>
     </div>
+
     <br>
 
     <div style="text-align:center">
