--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,19 +5,15 @@ body{
 
 
 .slideshowCont{
-    max-width: 900px;
-    max-height: 600px;
+    max-width: 1000px;
     position: relative;
     margin: auto;
+    background-color: rgba(255,255,255,0.4);
+
 }
 
 .slides{
     display: none;
-    cursor: pointer;
-}
-
-.slides:hover{
-    opacity: 0.8;
 }
 
 .prev, .next{
@@ -55,7 +51,6 @@ body{
 }
 
 .numbertext {
-    color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
@@ -63,10 +58,9 @@ body{
 }
 
 .content{
-    background-color: darkgray;
-    width: 80%;
+    width: 100%;
     margin: auto;
-    padding-top: 5px;
+    padding-top: 2px;
 }
 
 .dot {
@@ -91,64 +85,7 @@ fade {
     animation-duration: 1.5s;
 }
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 11; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
 
-/* Modal Content (Image) */
-.modal-content{
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-.modal-content{
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@keyframes zoom{
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
-
-/* The Close Button */
-.closeImg {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.closeImg:hover,
-.closeImg:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
-}
-
-  
 @-webkit-keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
@@ -157,4 +94,25 @@ fade {
 @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
+}
+
+@media screen and (max-width: 600px) {
+    .slideshowCont{
+        max-width: 600px;
+        position: relative;
+        margin: auto;
+        background-color: rgba(255,255,255,0.4);
+
+    }
+
+    .dot {
+        cursor: pointer;
+        height: 10px;
+        width: 10px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
 }
