--- a/static/css/topBar.css
+++ b/static/css/topBar.css
@@ -2,13 +2,13 @@
 #TopBar{
     background-color: #444;
     width: 100%;
-    height: 40px;
+    height: 60px;
     overflow: hidden;
-    line-height: 40px;
-    padding: 14px 0;
+    line-height: 60px;
     text-align: center;
     border-bottom: 3px solid black;
-    z-index: 1;
+    z-index: 5;
+    transition: 0.1s;
 }
 
 
@@ -64,16 +64,24 @@
     color: #818181;
     font-size: 25px;
     display: block;
-    transition: 0.3s;
+    transition: 0.2s;
+}
+
+.sideMenu a:hover{
+    color: whitesmoke;
+    font-size: 27px;
+    background-color: #aaa;
+    padding: 18px 32px 13px 32px;
+    border-bottom: 3px solid white;
 }
 
 .container{
     display: inline-block;
     position: absolute;
-    margin: 4px 2px;
     right: 5px;
-    line-height: 40px;
+    padding: 5px 0;
     cursor: pointer;
+    z-index: 1;
     overflow: hidden;
 }
 
@@ -95,11 +103,39 @@
     right: 0;
     left: 0;
     overflow: hidden;
-    width: 100vw;
-    padding: 14px 0;
+    width: 100%;
 }
 
 
 .sticky + .content{
     padding-top: 60px;
+}
+
+@media screen and (max-width: 420px)
+{
+
+    #TopBar{
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+    #TopBar a{
+        float: none;
+        font-size: 13px;
+    }
+    .container .bar{
+        width: 20px;
+        height: 3px;
+        margin: 3px 0;
+    }
+
+    .container{
+        display: inline-block;
+        position: relative;
+        right: 5px;
+        padding: 5px 0;
+        cursor: pointer;
+        z-index: 1;
+        overflow: hidden;
+    }
+
 }
