--- a/templates/base/navBar.html
+++ b/templates/base/navBar.html
@@ -19,9 +19,9 @@
     </div>
 
     <div class="sideMenu" id="sideMenu">
-        <a href="javascript:void(0)" id="clsBtn" onclick="closeMenu()">&times;</span>
+        <a href="javascript:void(0)" id="clsBtn" onclick="closeMenu()">&times;</a>
         <a href="#">Login</a>
-        <a href="#">SignIn</a>
+        <a href="#">Sign Up</a>
         <a href="#">Contact</a>
         
 
