--- a/templates/index.html
+++ b/templates/index.html
@@ -23,30 +23,18 @@
             <div class="numberText">1 / 3</div>
             {% load static %}
             <img class="slideImg" src="{% static 'images/slide1.jpg' %}" alt="image source" style="width:100%">
-            <div class="modal">
-                <span class="closeImg">&times;</span>
-                <img class="modal-content">
-            </div>
             <div class="captionText"></div>
         </div>
         <div class="slides fade">.
             <div class="numberText">2 / 3</div>
             {% load static %}
             <img class="slideImg" src="{% static 'images/slide2.jpg' %}" alt="image source" style="width:100%">
-            <div class="modal">
-                <span class="closeImg">&times;</span>
-                <img class="modal-content">
-            </div>
             <div class="captionText"></div>
         </div>
         <div class="slides fade">
             <div class="numberText">3 / 3</div>
             {% load static %}
             <img class="slideImg" src="{% static 'images/slide3.jpg' %}" alt="image source" style="width:100%">
-            <div class="modal">
-                <span class="closeImg">&times;</span>
-                <img class="modal-content">
-            </div>
             <div class="captionText"></div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094</a>
@@ -60,11 +48,16 @@
         <span class="dot" onclick="currentSlide(2)"></span> 
         <span class="dot" onclick="currentSlide(3)"></span> 
     </div>
-    {% load static %}
-    <script src="{% static 'js/index.js' %}"></script>
     </div>
 {% endblock mainContent %}
-    
+
+
+{% block pageFooter %}
+
+{% load static %}
+<script src="{% static 'js/index.js' %}"></script>
+{% endblock %}
+
 
 
     
